--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -181,12 +180,6 @@
         <profile>
             <!-- Production mode is activated using -Pproduction -->
             <id>production</id>
-            <dependencies>
-                <dependency>
-                    <groupId>org.postgresql</groupId>
-                    <artifactId>postgresql</artifactId>
-                </dependency>
-            </dependencies>
             <build>
                 <plugins>
                     <plugin>
@@ -203,6 +196,7 @@
                         </executions>
                         <configuration>
                             <productionMode>true</productionMode>
+                            <pnpmEnable>false</pnpmEnable>
                         </configuration>
                     </plugin>
                 </plugins>
