--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-node_modules/**
-target/**
+node_modules/
+target/
 .DS_Store
-.idea/**
+.idea/
