--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.example.application</groupId>
     <artifactId>LAMPView</artifactId>
     <name>LAMPView</name>
-    <version>0.6</version>
+    <version>0.7</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -147,6 +147,16 @@
             <artifactId>awaitility</artifactId>
             <version>3.1.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
