--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ vaadin.launch-browser=false
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.sql.init.mode=never
+
+lampview.lamp-server-address=
+lampview.lamp-access-key=
+lampview.lamp-secret-key=
+lampview.lamp-study-id=
+
+lampview.recipient-email-address=
+lampview.google-email-address=
+lampview.google-app-password=
+
+lampview.server-set=false
+lampview.email-set=false
