Make data cache status editable in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,7 @@ vaadin.launch-browser=false
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.sql.init.mode=never
 
-lampview.lamp-server-address=
-lampview.lamp-access-key=
-lampview.lamp-secret-key=
-lampview.lamp-study-id=
-
-lampview.recipient-email-address=
-lampview.google-email-address=
-lampview.google-app-password=
+lampview.status=BUILT
 
 lampview.server-set=false
 lampview.email-set=false
