Fix Dockerfile and application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ vaadin.launch-browser=false
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.sql.init.mode=never
 
-lampview.status=BUILT
+lampview.status=NOT_BUILT
 
 lampview.server-set=false
 lampview.email-set=false
