Update README and app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,14 @@ spring.sql.init.mode=never
 
 lampview.status=NOT_BUILT
 
+lampview.lamp-server-address=
+lampview.lamp-access-key=
+lampview.lamp-secret-key=
+lampview.lamp-study-id=
+
+lampview.google-email-address=
+lampview.google-app-password=
+lampview.recipient-email-address=
+
 lampview.server-set=false
 lampview.email-set=false
