--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,16 @@ vaadin.launch-browser=false
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.sql.init.mode=never
 
-lampview.status=NOT_BUILT
+qualix.status=NOT_BUILT
 
-lampview.lamp-server-address=
-lampview.lamp-access-key=
-lampview.lamp-secret-key=
-lampview.lamp-study-id=
+qualix.lamp-server-address=
+qualix.lamp-access-key=
+qualix.lamp-secret-key=
+qualix.lamp-study-id=
 
-lampview.google-email-address=
-lampview.google-app-password=
-lampview.recipient-email-address=
+qualix.google-email-address=
+qualix.google-app-password=
+qualix.recipient-email-address=
 
-lampview.server-set=false
-lampview.email-set=false
+qualix.server-set=false
+qualix.email-set=false
